	PR fortran/29210

* primary.c (match_sym_complex_part): Named constants as real or
	imaginary part of complex a named constant are only allowed in
	Fortran 2003.

	* gfortran.dg/complex_parameter_1.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117368 138bc75d-0d04-0410-961f-82ee72b054a4